added apps and galleries

--- a/works.html
+++ b/works.html
@@ -18,7 +18,7 @@
 	<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
 	<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -110,153 +110,294 @@
 						<h3 class="fullview__item-title">HTML5 Banners</h3>
 					</div>
 					<div class="centered">
-					<div class="banner-container flex wrap">
-						<div class="flex wrap">
-							<div class="banner" id="b728x90">
-								<p class="label">Size: 728 x 90 px</p>
-								<iframe src="Banners/728x90-Blue-Funnel-AdRoll-DE/728x90-Blue-Funnel-DE.html" width="728" height="90"></iframe>
-							</div>
-							<div class="banner" id="b320x50">
-								<p class="label">Size: 320 x 50 px</p>
-								<iframe src="Banners/320x50-Blue-Funnel-AdRoll-DE/320x50-Blue-Funnel-DE.html" width="320" height="50"></iframe>
-							</div>
-						</div>
-						<div class="flex wrap">
-							<div class="banner" id="b160x600">
-								<p class="label">Size: 160 x 600 px</p>
-								<iframe src="Banners/160x600-Blue-Funnel-AdRoll-DE/160x600-Blue-Funnel-DE.html" width="160" height="600"></iframe>
+						<div class="banner-container flex wrap">
+							<div class="flex wrap">
+								<div class="banner" id="b728x90">
+									<p class="label">Size: 728 x 90 px</p>
+									<iframe src="Banners/728x90-Blue-Funnel-AdRoll-DE/728x90-Blue-Funnel-DE.html" width="728" height="90"></iframe>
+								</div>
+								<div class="banner" id="b320x50">
+									<p class="label">Size: 320 x 50 px</p>
+									<iframe src="Banners/320x50-Blue-Funnel-AdRoll-DE/320x50-Blue-Funnel-DE.html" width="320" height="50"></iframe>
+								</div>
 							</div>
 							<div class="flex wrap">
-								<div class="banner" id="b300x600">
-									<p class="label">Size: 300 x 600 px</p>
-									<iframe src="Banners/300x600-Blue-Funnel-AdRoll-DE/300x600-Blue-Funnel-DE.html" width="300" height="600"></iframe>
+								<div class="banner" id="b160x600">
+									<p class="label">Size: 160 x 600 px</p>
+									<iframe src="Banners/160x600-Blue-Funnel-AdRoll-DE/160x600-Blue-Funnel-DE.html" width="160" height="600"></iframe>
 								</div>
-								<div class="banner" id="b300x250">
-									<p class="label">Size: 300 x 250 px</p>
-									<iframe src="Banners/300x250-Blue-Funnel-AdRoll-DE/300x250-Blue-Funnel-DE.html" width="300" height="250"></iframe>
+								<div class="flex wrap">
+									<div class="banner" id="b300x600">
+										<p class="label">Size: 300 x 600 px</p>
+										<iframe src="Banners/300x600-Blue-Funnel-AdRoll-DE/300x600-Blue-Funnel-DE.html" width="300" height="600"></iframe>
+									</div>
+									<div class="banner" id="b300x250">
+										<p class="label">Size: 300 x 250 px</p>
+										<iframe src="Banners/300x250-Blue-Funnel-AdRoll-DE/300x250-Blue-Funnel-DE.html" width="300" height="250"></iframe>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="border-top"></div>
-				<div class="fullview__item-h3">
-					<h3 class="fullview__item-title">Funnel</h3>
-				</div>
-				<div class="preview-container">
-					<img src="img/Funnel-preview.png" class="preview">
-				</div>
-				<div class="border-top"></div>
-				<div class="fullview__item-h3">
-					<h3 class="fullview__item-title">"Paris Nuits" Magazine Advetorial</h3>
-				</div>
-				<div class="preview-container">
-					<img src="img/Magazine.png"  id="paris-nuits" class="preview">
-				</div>
+					<div class="border-top"></div>
+					<div class="fullview__item-h3">
+						<h3 class="fullview__item-title">Funnel</h3>
+					</div>
+					<div class="preview-container">
+						<img src="img/Funnel-preview.png" class="preview">
+					</div>
+					<div class="border-top"></div>
+					<div class="fullview__item-h3">
+						<h3 class="fullview__item-title">"Paris Nuits" Magazine Advetorial</h3>
+					</div>
+					<div class="preview-container">
+						<img src="img/Magazine.png" id="paris-nuits" class="preview">
+					</div>
 				</div>
 				<div class="mobile-demo-container">
 					<img src="img/marketing-preview.png" class="mobile-demo-1">
 				</div>
 			</div>
-			<div class="fullview__item" style="background-image: url(img/2.jpg)">
-				<span class="fullview__item-number">02</span>
-				<div class="fullview__item-titlewrap">
-					<h3 class="fullview__item-title">Marketing Campaign</h3>
-					<p class="fullview__item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-						aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
-					<span class="fullview__item-more">more</span>
+			<div class="fullview__item" style="background-color: #ffffff">
+				<div class="showcase-container">
+					<div class="first-view">
+						<span class="fullview__item-number">02</span>
+						<div class="fullview__item-titlewrap">
+							<h3 class="fullview__item-title">Mobile Apps</h3>
+							<p class="fullview__item-description">design / UX</p>
+							<div class="fullview__details-container">
+								<h3 class="fullview__details">Year</h3>
+								<ul class="fullview__year-list">
+									<li>2015</li>
+								</ul>
+							</div>
+							<div class="fullview__details-container">
+								<h3 class="fullview__details">DELIVERABLES</h3>
+								<ul class="fullview__year-list">
+									<li>UX</li>
+									<li>Graphic Design</li>
+									<li>UI Design</li>
+								</ul>
+							</div>
+							<div class="fullview__details-container">
+								<h3 class="fullview__details">Tools</h3>
+								<ul class="fullview__year-list">
+									<li>Sketch</li>
+									<li>Photoshop</li>
+									<li>Illustrator</li>
+									<li>Invision</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="border-top"></div>
+					<div class="fullview__item-h3">
+						<h3 class="fullview__item-title">Sicher! App</h3>
+					</div>
+					<div class="centered-bg">
+						<div class="screens-gallery">
+							<div class="screen-gallery-column">
+								<div class="screen-gallery-item">
+									<img src="img/Sicher_splash.png">
+								</div>
+								<div class="screen-gallery-item">
+									<img src="img/Sicher_Login.png">
+								</div>
+								<div class="screen-gallery-item">
+									<img src="img/Sicher_GMenager.png">
+								</div>
+							</div>
+							<div class="screen-gallery-column">
+								<div class="screen-gallery-item">
+									<img src="img/Sicher_Filters.png">
+								</div>
+								<div class="screen-gallery-item">
+									<img src="img/Sicher_Market.png">
+								</div>
+								<div class="screen-gallery-item">
+									<img src="img/Sicher_PersData.png">
+								</div>
+							</div>
+							<div class="screen-gallery-column">
+								<div class="screen-gallery-item">
+									<img src="img/Sicher_Payment.png">
+								</div>
+								<div class="screen-gallery-item">
+									<img src="img/Sicher_ClaimMess.png">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="fullview__item-h3">
+						<h3 class="fullview__item-title">Gift Guide App</h3>
+					</div>
+					<div class="centered-bg">
+						<div class="screens-gallery">
+							<div class="screen-gallery-column">
+								<div class="screen-gallery-item">
+									<img src="img/All_0000_Splash.png">
+								</div>
+								<div class="screen-gallery-item">
+									<img src="img/All_0002_Home.png">
+								</div>
+								<div class="screen-gallery-item">
+									<img src="img/All_0003_Menu.png">
+								</div>
+							</div>
+							<div class="screen-gallery-column">
+								<div class="screen-gallery-item">
+									<img src="img/All_0008_Filter_Interests.png">
+								</div>
+								<div class="screen-gallery-item">
+									<img src="img/All_0011_Suggestions.png">
+								</div>
+								<div class="screen-gallery-item">
+									<img src="img/All_0012_PP.png">
+								</div>
+							</div>
+							<div class="screen-gallery-column">
+								<div class="screen-gallery-item">
+									<img src="img/All_0014_Friend's-Profile.png">
+								</div>
+								<div class="screen-gallery-item">
+									<img src="img/All_0015_Friend's-Wish-list.png">
+								</div>
+								<div class="screen-gallery-item">
+									<img src="img/All_0017_ChP-Address.png">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="mobile-demo-container">
+					<img src="img/GG-header.jpg" class="mobile-demo" id="gg">
 				</div>
 			</div>
 			<div class="fullview__item" style="background-color: #ffffff">
-					<div class="showcase-container">
-						<div class="first-view">
-								<span class="fullview__item-number">03</span>
-								<div class="fullview__item-titlewrap">
-										<h3 class="fullview__item-title">Dance Network</h3>
-										<p class="fullview__item-description">design / direction / development</p>
-										<div class="fullview__details-container">
-											<h3 class="fullview__details">Year</h3>
-											<ul class="fullview__year-list">
-												<li>2018</li>
-											</ul>
-										</div>
-										<div class="fullview__details-container">
-											<h3 class="fullview__details">DELIVERABLES</h3>
-											<ul class="fullview__year-list">
-												<li>UX</li>
-												<li>Graphic Design</li>
-												<li>UI Design</li>
-											</ul>
-										</div>
-										<div class="fullview__details-container">
-											<h3 class="fullview__details">Tools</h3>
-											<ul class="fullview__year-list">
-												<li>Sketch</li>
-												<li>Photoshop</li>
-												<li>Illustrator</li>
-												<li>Invision</li>
-												<li>Vue.js</li>
-											</ul>
-										</div>
-									</div>
-							<div class="border-top"></div>
+				<div class="showcase-container">
+					<div class="first-view">
+						<span class="fullview__item-number">03</span>
+						<div class="fullview__item-titlewrap">
+							<h3 class="fullview__item-title">Dance Network</h3>
+							<p class="fullview__item-description">design / direction / development</p>
+							<div class="fullview__details-container">
+								<h3 class="fullview__details">Year</h3>
+								<ul class="fullview__year-list">
+									<li>2018</li>
+								</ul>
+							</div>
+							<div class="fullview__details-container">
+								<h3 class="fullview__details">DELIVERABLES</h3>
+								<ul class="fullview__year-list">
+									<li>UX</li>
+									<li>Graphic Design</li>
+									<li>UI Design</li>
+								</ul>
+							</div>
+							<div class="fullview__details-container">
+								<h3 class="fullview__details">Tools</h3>
+								<ul class="fullview__year-list">
+									<li>Sketch</li>
+									<li>Photoshop</li>
+									<li>Illustrator</li>
+									<li>Invision</li>
+									<li>Vue.js</li>
+								</ul>
+							</div>
 						</div>
-						<div class="flex-wrap">
-							<img src="img/DN-Demo.png" class="gallery-item site-demo">
-						</div>
+						<div class="border-top"></div>
 					</div>
-					<div class="mobile-demo-container">
-						<img src="img/DN-Demo-m.png" class="mobile-demo">
+					<div class="flex-wrap">
+						<img src="img/DN-Demo.png" class="gallery-item site-demo">
 					</div>
 				</div>
+				<div class="mobile-demo-container">
+					<img src="img/DN-Demo-m.png" class="mobile-demo">
+				</div>
+			</div>
 			<div class="fullview__item" style="background-color: #ffffff">
-					<div class="showcase-container">
-						<div class="first-view">
-							<span class="fullview__item-number">04</span>
-							<div class="fullview__item-titlewrap">
-								<h3 class="fullview__item-title">Ruby – Art Project</h3>
-								<p class="fullview__item-description">visual art / character design / sculpture</p>
-								<div class="fullview__details-container">
-									<h3 class="fullview__details">Year</h3>
-									<ul class="fullview__year-list">
-										<li>2018</li>
-									</ul>
+				<div class="showcase-container">
+					<div class="first-view">
+						<span class="fullview__item-number">04</span>
+						<div class="fullview__item-titlewrap">
+							<h3 class="fullview__item-title">Ruby – Art Project</h3>
+							<p class="fullview__item-description">visual art / character design / sculpture</p>
+							<div class="fullview__details-container">
+								<h3 class="fullview__details">Year</h3>
+								<ul class="fullview__year-list">
+									<li>2018</li>
+								</ul>
+							</div>
+							<div class="fullview__details-container">
+								<h3 class="fullview__details">Techniques</h3>
+								<ul class="fullview__year-list">
+									<li>Sculpture</li>
+									<li>Painting</li>
+									<li>Tailoring</li>
+									<li>Drawing</li>
+									<li>Photography</li>
+								</ul>
+							</div>
+							<div class="fullview__details-container">
+								<h3 class="fullview__details">Materials</h3>
+								<ul class="fullview__year-list">
+									<li>Modelling Clay</li>
+									<li>Airbrush</li>
+									<li>Acrylic Colours</li>
+									<li>Line Pens</li>
+								</ul>
+							</div>
+						</div>
+						<div class="border-top"></div>
+					</div>
+					<div class="centered-bg">
+						<div class="screens-gallery">
+							<div class="screen-gallery-column">
+								<div class="screen-gallery-item">
+									<img src="img/Ruby-14.jpg">
 								</div>
-								<div class="fullview__details-container">
-									<h3 class="fullview__details">Techniques</h3>
-									<ul class="fullview__year-list">
-										<li>Sculpture</li>
-										<li>Painting</li>
-										<li>Tailoring</li>
-										<li>Drawing</li>
-									</ul>
+								<div class="screen-gallery-item">
+									<img src="img/Ruby-10.jpg">
 								</div>
-								<div class="fullview__details-container">
-									<h3 class="fullview__details">Materials</h3>
-									<ul class="fullview__year-list">
-										<li>Modelling Clay</li>
-										<li>Airbrush</li>
-										<li>Acrylic Colours</li>
-										<li>Line Pens</li>
-									</ul>
+								<div class="screen-gallery-item">
+									<img src="img/Ruby-15.jpg">
 								</div>
 							</div>
-							<div class="border-top"></div>
+							<div class="screen-gallery-column">
+								<div class="screen-gallery-item">
+									<img src="img/Ruby-9.jpg">
+								</div>
+								<div class="screen-gallery-item">
+									<img src="img/Ruby-18.jpg">
+								</div>
+								<div class="screen-gallery-item">
+									<img src="img/Ruby-11.jpg">
+								</div>
+								<div class="screen-gallery-item">
+									<img src="img/Ruby-17.jpg">
+								</div>
+							</div>
+							<div class="screen-gallery-column">
+								<div class="screen-gallery-item">
+									<img src="img/Ruby-12.jpg">
+								</div>
+								<div class="screen-gallery-item">
+									<img src="img/Ruby-4.jpg">
+								</div>
+								<div class="screen-gallery-item">
+									<img src="img/Ruby-13.jpg">
+								</div>
+							</div>
 						</div>
-						<div class="flex-wrap">
-							<img src="img/Ruby-1.jpg" class="gallery-item">
-							<img src="img/Ruby-2.jpg" class="gallery-item">
-							<img src="img/Ruby-3.jpg" class="gallery-item">
-							<img src="img/Ruby-4.jpg" class="gallery-item">
-							<img src="img/Ruby-5.jpg" class="gallery-item">
-							<img src="img/Ruby-6.jpg" class="gallery-item">
-						</div>
-					</div>
-					<div class="mobile-footer">
-						<div class="footer-border-top"></div>
-						<div class="footer-p"><p>Made by Elena Volovicheva</p></div>
 					</div>
 				</div>
+				<div class="mobile-footer">
+					<div class="footer-border-top"></div>
+					<div class="footer-p">
+						<p>Made by Elena Volovicheva</p>
+					</div>
+				</div>
+			</div>
 			<h3 class="fullview__title">Made by Elena Volovicheva</h3>
 		</div>
 		<!--/fullview-->
@@ -264,7 +405,7 @@
 		<div class="revealer"></div>
 		<!-- Thumbs grid -->
 		<div class="grid grid--thumbs">
-			<div class="grid__item" data-revealer-color="#fe0048">
+			<div class="grid__item" data-revealer-color="#fac92f">
 				<h3 class="grid__item-title">
 					<span>Marketing Campaign</span>
 				</h3>
@@ -278,14 +419,13 @@
 			</div>
 			<div class="grid__item" data-revealer-color="#fac92f">
 				<h3 class="grid__item-title">
-					<span>Marketing Campaign</span>
+					<span>Mobile Apps</span>
 				</h3>
 				<span class="grid__item-number">
 					<span>02</span>
 				</span>
 				<div class="grid__item-imgwrap">
-					<img class="grid__item-img" src="img/thumb2.jpg" alt="Some image" />
-					<div class="grid__item-bg" style="background-image: url(img/thumb2.jpg)"></div>
+					<img class="grid__item-img" src="img/Project-2-Visual.png" alt="Some image" />
 				</div>
 			</div>
 			<div class="grid__item" data-revealer-color="#fac92f">
@@ -296,7 +436,7 @@
 					<span>03</span>
 				</span>
 				<div class="grid__item-imgwrap">
-					<img class="grid__item-img" src="img/Project-3-Visual.png" alt="Some image" />
+					<img class="grid__item-img" src="img/thumb3.png" alt="Some image" />
 					<!-- <div class="grid__item-bg" style="background-image: url(img/thumb3.jpg)"></div> -->
 				</div>
 			</div>
@@ -313,9 +453,9 @@
 				</div>
 			</div>
 			<div class="grid__item grid__item--more">
-				<button class="grid__toggle">
-					<span class="grid__toggle-inner grid__toggle-more">
-						<span class="grid__toggle-text">more</span>
+					<button class="grid__toggle">
+						<span class="grid__toggle-inner grid__toggle-more">
+						<span class="grid__toggle-text">Made with love</span>
 						<svg class="grid__toggle-icon grid__toggle-icon--more">
 							<use xlink:href="#icon-plus"></use>
 						</svg>
