--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	<script src="navigation.js"></script>
 	<section class="scrollable">
 		<div class="message">View on a larger screen is recommended</div>
-		<!-- Outer grid (header, title, etc.) -->
-		<div class="grid-scrollable grid--outer pic-as-bg" style="background-image: url(img/Elena-pic-3.jpg)">
+		<!-- <div class="grid-scrollable grid--outer pic-as-bg" style="background-image: url(img/Elena-pic-3.jpg)"> -->
+		<div class="grid-scrollable grid--outer pic-as-bg">
 			<div class="title-wrap">
 				<h2 class="title">Elena Volovicheva</h2>
 				<span class="profession">designer / artist / frontend-developer</span>
@@ -41,7 +41,7 @@
 			</div>
 			<h3 class="fullview__title">Made by Elena Volovicheva</h3>
 		</div>
-		<!-- <div class="my_pic-container" style="background-image: url(img/Elena-pic-3.jpg)"></div> -->
+		<div class="my_pic-container" style="background-image: url(img/Elena-pic-cut.jpg)"></div>
 	</section>
 	<script src="js/imagesloaded.pkgd.min.js"></script>
 	<script src="js/TweenMax.min.js"></script>
