--- a/works.html
+++ b/works.html
@@ -26,6 +26,7 @@
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
 	<script>document.documentElement.className = "js"; var supportsCssVars = function () { var e, t = document.createElement("style"); return t.innerHTML = "root: { --tmp-var: bold; }", document.head.appendChild(t), e = !!(window.CSS && window.CSS.supports && window.CSS.supports("font-weight", "var(--tmp-var)")), t.parentNode.removeChild(t), e }; supportsCssVars() || alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 </head>
@@ -94,7 +95,8 @@
 						<div class="border-top"></div>
 						<div class="player-container">
 							<div class="fullview__item-h3">
-								<h3 class="fullview__item-title">Animation</h3>
+								<span class="projects-item-counter">01</span>
+								<h3 class="fullview__item-title-body">Animation</h3>
 							</div>
 							<div class="player-container-inner">
 								<iframe class="player" src="https://player.vimeo.com/video/275386303" width="350" height="350" frameborder="0" webkitallowfullscreen
@@ -107,7 +109,8 @@
 					</div>
 					<div class="border-top"></div>
 					<div class="fullview__item-h3">
-						<h3 class="fullview__item-title">HTML5 Banners</h3>
+						<span class="projects-item-counter">02</span>
+						<h3 class="fullview__item-title-body">HTML5 Banners</h3>
 					</div>
 					<div class="centered">
 						<div class="banner-container flex wrap">
@@ -141,14 +144,16 @@
 					</div>
 					<div class="border-top"></div>
 					<div class="fullview__item-h3">
-						<h3 class="fullview__item-title">Funnel</h3>
+							<span class="projects-item-counter">03</span>
+						<h3 class="fullview__item-title-body">Funnel</h3>
 					</div>
 					<div class="preview-container">
 						<img src="img/Funnel-preview.png" class="preview">
 					</div>
 					<div class="border-top"></div>
 					<div class="fullview__item-h3">
-						<h3 class="fullview__item-title">"Paris Nuits" Magazine Advetorial</h3>
+							<span class="projects-item-counter">04</span>
+						<h3 class="fullview__item-title-body">"Paris Nuits" Magazine Advetorial</h3>
 					</div>
 					<div class="preview-container">
 						<img src="img/Magazine.png" id="paris-nuits" class="preview">
@@ -192,7 +197,8 @@
 					</div>
 					<div class="border-top"></div>
 					<div class="fullview__item-h3">
-						<h3 class="fullview__item-title">Sicher! App</h3>
+							<span class="projects-item-counter">01</span>
+						<h3 class="fullview__item-title-body">Sicher! App</h3>
 					</div>
 					<div class="centered-bg">
 						<div class="screens-gallery">
@@ -229,7 +235,8 @@
 						</div>
 					</div>
 					<div class="fullview__item-h3">
-						<h3 class="fullview__item-title">Gift Guide App</h3>
+							<span class="projects-item-counter">02</span>
+						<h3 class="fullview__item-title-body">Gift Guide App</h3>
 					</div>
 					<div class="centered-bg">
 						<div class="screens-gallery">
