--- a/index.html
+++ b/index.html
@@ -1,53 +1,201 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Elena Volovicheva</title>
-	<meta name="description" content="Online Portfolio of Elena Volovicheva." />
-	<meta name="keywords" content="elena volovicheva, portfolio, designer, visual designer, web designer, designer berlin, front-end developer, front end developer"
-	/>
-	<meta name="author" content="Elena Volovicheva" />
-	<link rel="shortcut icon" href="favicon.ico">
-	<link rel="stylesheet" type="text/css" href="css/base.css" />
-	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-	<script>document.documentElement.className = "js"; var supportsCssVars = function () { var e, t = document.createElement("style"); return t.innerHTML = "root: { --tmp-var: bold; }", document.head.appendChild(t), e = !!(window.CSS && window.CSS.supports && window.CSS.supports("font-weight", "var(--tmp-var)")), t.parentNode.removeChild(t), e }; supportsCssVars() || alert("Please view this page in a modern browser that supports CSS Variables.");</script>
-</head>
-
-<body class="loading">
-	<script src="navigation.js"></script>
-	<section class="scrollable">
-		<div class="message">View on a larger screen is recommended</div>
-		<!-- <div class="grid-scrollable grid--outer pic-as-bg" style="background-image: url(img/Elena-pic-3.jpg)"> -->
-		<div class="grid-scrollable grid--outer pic-as-bg">
-			<div class="title-wrap">
-				<h2 class="title">Elena Volovicheva</h2>
-				<span class="profession">designer / artist / frontend-developer</span>
-				<span class="subtitle">portfolio</span>
-				<span class="year">2018</span>
-				<div class="my_story-wrap">
-					<p>Hi, I am Elena and I am a Senior Visual Designer at Fonpit, based in Berlin. In 2013 I moved from Ukraine to Germany
-						for work. How can visualisation help you in developing your idea? Why is it even important to visualise an idea and
-						what does it mean? Firstly, there are 2 main phases where you will need a visualisation. Initially for yourself. Secondly,
-						to communicate your idea to investors, partners or customers. In this talk I will share some techniques, which we designers
-						use when creating our works.
-					</p>
-				</div>
-				<div class="button">
-					<a href="works.html" class="btn">see my works</a>
-				</div>
-				<div><h3 class="fullview__title-mobile">Made by Elena Volovicheva</h3></div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Animated Image Pieces | Demo: Entry | Codrops</title>
+		<meta name="description" content="An animated pieces effect for images with many possibilities" />
+		<meta name="keywords" content="animation, piece, fragment, box, css, javascript, demo, effect, web dev" />
+		<meta name="author" content="Codrops" />
+		<link rel="shortcut icon" href="favicon.ico">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="css/base.css" />
+		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
+		<link rel="stylesheet" type="text/css" href="css/demo.css" />
+		<link rel="stylesheet" type="text/css" href="css/demo-entry.css" />
+		<link rel="stylesheet" type="text/css" href="pater/pater.css" />
+		<script>document.documentElement.className = 'js';</script>
+	</head>
+	<body class="demo-grid loading">
+		<main>
+			<div class="content">
+				<nav class="page-nav">
+						<a href="works.html" class="menu-item-home first-item">Works</a>
+						<a href="cv.html" class="menu-item-home second-item">Curriculum Vitae</a>
+						<a href="contact.html" class="menu-item-home last-item">Contact</a>
+						<a class="page-nav__item page-nav__item--close" href="#">Back</a>
+				</nav>
+				<div class="pieces" style="background-image: url(img/Elena-pic-cut.jpg)"></div>
+				<div class="grid-scrollable grid--outer">
+				<div class="title-wrap info info--open">
+					<div>
+						<h2 class="title">Elena Volovicheva</h2>
+						<span class="profession">designer / artist / frontend-developer</span>
+						<span class="subtitle">portfolio</span>
+						<span class="year">2018</span>
+					</div>
+						<div class="my_story-wrap">
+							<p>At the age of 25 I dropped all I had to become a designer
+							</p>
+						</div>
+						<div class="content__title-container">
+							<h2 class="content__title">Explore</h2>
+						</div>
+						</div>
+						<!-- <div><h3 class="fullview__title-mobile">Made by Elena Volovicheva</h3></div> -->
+					</div>
 			</div>
-			<h3 class="fullview__title">Made by Elena Volovicheva</h3>
-		</div>
-		<div class="my_pic-container" style="background-image: url(img/Elena-pic-cut.jpg)"></div>
-	</section>
-	<script src="js/imagesloaded.pkgd.min.js"></script>
-	<script src="js/TweenMax.min.js"></script>
-	<script src="js/demo.js"></script>
-	<script src="js/classie.js"></script>
-	<script src="js/modernizr.custom.js"></script>
-</body>
+		</main>
+		<script src="js/imagesloaded.pkgd.min.js"></script>
+		<script src="js/anime.min.js"></script>
+		<script src="js/main.js"></script>
+		<!-- <script>
+		$(function() {
+			$('#spashlink').on('click', function(e) {
+				e.preventDefault();
+				var self = this;
+				setTimeout(function() {
+					window.location.href = self.href;
+				}, 3000);
+			});
+		});
+		</script> -->
+		<script>
+		{
+			imagesLoaded(document.body, { background: true }, () => document.body.classList.remove('loading'));
 
+			const piecesEl = document.querySelector('.content .pieces');
+			const piecesObj = new Pieces(piecesEl, {
+				 pieces: {rows: 14, columns: 12}
+			});
+			const menuEl = document.querySelector('.page-nav');
+			const optionsCtrl = document.querySelector('.content__title');
+			const closeOptionsCtrl = menuEl.querySelector('a.page-nav__item--close');
+			const infoEl = document.querySelector('.info');
+
+			const showOptions = () => {
+				menuEl.classList.add('page-nav--open');
+				infoEl.classList.add('info-hidden');
+				infoEl.classList.remove('info--open');
+
+				piecesObj.animate({
+					duration: 3000,
+					delay: (t,i) => {
+						const elBounds = piecesEl.getBoundingClientRect();
+						const x1 = elBounds.left + elBounds.width/2;
+						const y1 = elBounds.top + elBounds.height/2;
+						const tBounds = t.getBoundingClientRect();
+						const x2 = tBounds.left + tBounds.width/2;
+						const y2 = tBounds.top + tBounds.height/2;
+						const dist = Math.sqrt(Math.pow(x2-x1,2) + Math.pow(y2-y1,2));
+						const maxDist = Math.sqrt(Math.pow(elBounds.left-x1,2) + Math.pow(elBounds.top-y1,2));
+						const maxDelay = 300;
+
+						t.dataset.centerx = x2;
+						t.dataset.centery = y2;
+
+						return -1*maxDelay/maxDist*dist + maxDelay;
+					},
+					easing: [0.1,1,0,1],
+					translateX: (t,i) => { 
+						return t.dataset.column < piecesObj.getTotalColumns()/2 ? anime.random(-400,0) : anime.random(0,400);
+					},
+					translateY: (t,i) => { 
+						return t.dataset.row < piecesObj.getTotalRows()/2 ? anime.random(-400,0) : anime.random(0,400);
+					},
+					opacity: 0.2
+				});
+				
+				anime.remove(optionsCtrl);
+				anime({
+					targets: optionsCtrl,
+					duration: 700,
+					easing: 'easeOutExpo',
+					scale: 1.2,
+					opacity: 0
+				});
+
+				anime.remove(menuEl);
+				anime({
+					targets: menuEl,
+					duration: 700,
+					delay: 150,
+					easing: 'easeOutExpo',
+					scale: [0,1],
+					opacity: 1
+				});
+
+				anime.remove(infoEl);
+				anime({
+					targets: infoEl,
+					duration: 700,
+					delay: 150,
+					easing: 'easeOutExpo',
+					scale: 1.1,
+					opacity: 0
+				});
+			};
+
+			const hideOptions = (ev) => {
+				ev.preventDefault();
+				menuEl.classList.remove('page-nav--open');
+				infoEl.classList.add('info--open');
+				infoEl.classList.remove('info-hidden');
+
+				piecesObj.animate({
+					duration: 600,
+					delay: (t,i) => {
+						const elBounds = piecesEl.getBoundingClientRect();
+						const x1 = elBounds.left + elBounds.width/2;
+						const y1 = elBounds.top + elBounds.height/2;
+						const x2 = t.dataset.centerx;
+						const y2 = t.dataset.centery;
+						const dist = Math.sqrt(Math.pow(x2-x1,2) + Math.pow(y2-y1,2));
+						const maxDist = Math.sqrt(Math.pow(elBounds.left-x1,2) + Math.pow(elBounds.top-y1,2));
+						const maxDelay = 800;
+
+						return maxDelay/maxDist*dist;
+					},
+					easing: [0.1,1,0,1],
+					translateX: 0,
+					translateY: 0,
+					opacity: 1
+				});
+				
+				anime.remove(optionsCtrl);
+				anime({
+					targets: optionsCtrl,
+					duration: 700,
+					delay: 200,
+					easing: 'easeOutQuint',
+					scale: [1.1,1],
+					opacity: 1
+				});
+
+				anime.remove(menuEl);
+				anime({
+					targets: menuEl,
+					duration: 700,
+					easing: 'easeOutQuint',
+					scale: 0.8,
+					opacity: 0
+				});
+
+				anime.remove(infoEl);
+				anime({
+					targets: infoEl,
+					duration: 700,
+					easing: 'easeOutQuint',
+					scale: 1.0,
+					opacity: 1
+				});
+			};
+
+			optionsCtrl.addEventListener('click', showOptions);
+			closeOptionsCtrl.addEventListener('click', hideOptions);
+		}
+
+		</script>
+		<script src="pater/pater.js"></script>
+	</body>
 </html>
