adjusted index page

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="favicon.ico">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
-		<link rel="stylesheet" type="text/css" href="css/demo-entry.css" />
 		<link rel="stylesheet" type="text/css" href="pater/pater.css" />
 		<script>document.documentElement.className = 'js';</script>
 	</head>
@@ -30,12 +30,13 @@
 				<div class="title-wrap info info--open">
 					<div>
 						<h2 class="title">Elena Volovicheva</h2>
-						<span class="profession">designer / artist / frontend-developer</span>
+						<div class="space-25"></div>
+						<!-- <span class="profession">designer / artist / frontend-developer</span> -->
 						<span class="subtitle">portfolio</span>
 						<span class="year">2018</span>
 					</div>
 						<div class="my_story-wrap">
-							<p>At the age of 25 I dropped all I had to become a designer
+							<p>Designer /<br>Artist /<br> Frontend-Developer
 							</p>
 						</div>
 						<div class="content__title-container">
