--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 	/>
 	<meta name="author" content="Elena Volovicheva" />
 	<link rel="shortcut icon" href="favicon.ico">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
 	<script>document.documentElement.className = "js"; var supportsCssVars = function () { var e, t = document.createElement("style"); return t.innerHTML = "root: { --tmp-var: bold; }", document.head.appendChild(t), e = !!(window.CSS && window.CSS.supports && window.CSS.supports("font-weight", "var(--tmp-var)")), t.parentNode.removeChild(t), e }; supportsCssVars() || alert("Please view this page in a modern browser that supports CSS Variables.");</script>
 </head>
@@ -27,7 +27,7 @@
 				<span class="subtitle">portfolio</span>
 				<span class="year">2018</span>
 				<div class="fullview__details-container">
-					<h3 class="fullview__details">contact</h3>
+					<h3 class="fullview__details">Contact</h3>
 					<ul class="fullview__year-list">
 						<li>
 							<span class="contact-label">Phone:</span> +49 176 47110458</li>
