--- a/cv.html
+++ b/cv.html
@@ -22,6 +22,53 @@
 		<!-- Outer grid (header, title, etc.) -->
 		<div class="grid-scrollable grid--outer">
 			<div class="title-wrap">
+				<h2 class="title">Talks and Workshops</h2>
+				<div class="cv-container">
+					<div class="cv-block-container">
+						<div class="cv-block-left">
+							<span class="cv-date">26.10.2018</span>
+						</div>
+						<div class="cv-block-right">
+							<div class="company-name">Talk at PyCon.DE 2018</div>
+							<p>
+								<b>Topic:</b> "How to develop your project from an idea to architecture design in 50 minutes"
+							</p>
+						</div>
+					</div>
+					<div class="cv-block-container">
+							<div class="cv-block-left">
+								<span class="cv-date">25.08.2018</span>
+							</div>
+							<div class="cv-block-right">
+								<div class="company-name">Workshop at PyConPl 2018</div>
+								<p>
+									<b>Topic:</b> "Stuck with your idea? / Your idea perfectly shaped and designed within 1 hour"
+								</p>
+							</div>
+						</div>
+					<div class="cv-block-container">
+						<div class="cv-block-left">
+							<span class="cv-date">21.08.2018</span>
+						</div>
+						<div class="cv-block-right">
+							<div class="company-name">Workshop at CYREN GmbH</div>
+							<p>
+								<b>Topic:</b> "Stuck with your idea?"
+							</p>
+						</div>
+					</div>
+					<div class="cv-block-container">
+						<div class="cv-block-left">
+							<span class="cv-date">08.08.2018</span>
+						</div>
+						<div class="cv-block-right">
+							<div class="company-name">Talk at Fonpit AG</div>
+							<p>
+								<b>Topic:</b> "Develop your project from idea to architecture design in 50 minutes"
+							</p>
+						</div>
+					</div>
+				</div>
 				<h2 class="title">Work Expeience</h2>
 				<div class="cv-container">
 					<div class="cv-block-container">
@@ -35,19 +82,9 @@
 							<div class="company-name">Fonpit AG</div>
 							<p>As a
 								<b>Senior Visual UI Designer</b> and member of
-								<b>Development Team</b>, performing a managing and
-								<b>Art Direction</b> role.
+								<b>Development Team</b> I concept, design and develop user interfaces. In global scale, I am performing art direction
+								role.
 							</p>
-							<ul class="job-description">
-								<li>Front-end development for various...</li>
-								<li>
-									<b>Web Pages</b> and
-									<b>Apps</b>: concepting, creating UX flows, prototyping and layouting;</li>
-								<li>
-									<b>Automatisation</b> of the process of creating visual assets for internal usage;</li>
-								<li>
-									<b>Also</b>: photography with postproduction, branding, illustrating, motion design.</li>
-							</ul>
 						</div>
 					</div>
 					<div class="cv-block-container">
@@ -62,22 +99,8 @@
 							<p>As a
 								<b>Visual Designer</b> in
 								<b>Marketing Department</b>, I have participated as a co-creative director, concepting and executing various kinds of
-								design projects, such as:
+								design projects, mainly in frames of marketing campaigns.
 							</p>
-							<ul class="job-description">
-								<li>Marketing campaigns, which include
-									<b>animations</b>, explanation
-									<b>videos</b>,
-									<b>HTML5</b> and
-									<b>static</b> banners, print materials;</li>
-								<li>
-									<b>Web Pages</b> and
-									<b>Apps</b>: concepting, creating UX flows, prototyping and layouting;</li>
-								<li>
-									<b>Automatisation</b> of the process of creating visual assets for internal usage;</li>
-								<li>
-									<b>Also</b>: photography with postproduction, branding, illustrating, motion design.</li>
-							</ul>
 						</div>
 					</div>
 					<div class="cv-block-container">
@@ -90,18 +113,10 @@
 						<div class="cv-block-right">
 							<div class="company-name">simplesurance GmbH</div>
 							<p>As a
-								<b>Visual Designer</b> my field of responsibility included executing projects for internal needs of the company, as
-								well the client‘s needs:
+								<b>Visual Designer</b> my field of responsibility included executing projects for internal needs of the company and
+								communicate design concepts of various
+								<b>technical solutions</b> (e.g. White Label, API and Plugin) to our clients.
 							</p>
-							<ul class="job-description">
-								<li>Creating wireframes and
-									<b>high-fidelity mockups</b> to communicate design concepts of various
-									<b>technical solutions</b> (e.g. White Label, API and Plugin) to the clients;</li>
-								<li>Producing
-									<b>web</b> and
-									<b>print assets</b> (banners, presentations, exhibitions displays etc.) while working closely with
-									<b>various teams</b> (Sales, Marketing, Product, IT).</li>
-							</ul>
 						</div>
 					</div>
 					<div class="cv-block-container">
@@ -114,17 +129,9 @@
 						<div class="cv-block-right">
 							<div class="company-name">commercetools GmbH</div>
 							<p>As a
-								<b>Graphic Designer</b> I have supported various projects with graphic assets and materials, such as:
+								<b>Graphic Designer</b> I have supported the company projects with print and web materials and also creted brand guidelines
+								to develop the visual identity of the company.
 							</p>
-							<ul class="job-description">
-								<li>
-									<b>Print: </b>brochures, flyers, promotional company gifts, visuals for exhibitions and displays;</li>
-								<li>
-									<b>Online: </b>landing pages, email newsletters and banners;</li>
-								<li>Development of company
-									<b>visual identity</b> and
-									<b>brand guidelines</b>.</li>
-							</ul>
 						</div>
 					</div>
 					<div class="cv-block-container">
@@ -136,9 +143,8 @@
 						</div>
 						<div class="cv-block-right">
 							<div class="company-name">Freelance</div>
-							<p>Work including art direction, design, layout, typo-graphy, illustration, storyboards, photo manipulation/retouching,
-								posters, as well as .gifs and static advertising, infographic, layout for multiscreen eco-systems: mobile OS, apps
-								and web.
+							<p>As a Freelancer, I had a huge range of projects. Though, my main focus was on designing layouts for multiscreen eco-systems:
+								mobile OS, apps and web.
 							</p>
 						</div>
 					</div>
@@ -155,17 +161,8 @@
 								<b>co-founder</b> and
 								<b>PR Manager</b> of a
 								<b>start-up</b>, I was responsible for development of the Brand-Awareness of our company and also performing administrative
-								functions, such as:
+								functions.
 							</p>
-							<ul class="job-description">
-								<li>
-									<b>Planning</b> and
-									<b>management</b> of the school business functions;</li>
-								<li>Organising
-									<b>Promo Campaigns</b> and supporting the startup with all kinds of promo materials;</li>
-								<li>Maintaining and supporting corporate
-									<b>web site</b>.</li>
-							</ul>
 						</div>
 					</div>
 					<div class="cv-block-container">
@@ -178,17 +175,8 @@
 						<div class="cv-block-right">
 							<div class="company-name">Asweb</div>
 							<p>As a
-								<b>Web Designer</b> in a small IT-agency, I was working at various web projects, such as:
+								<b>Web Designer</b> in a small IT-agency, I was developing visual style of web projects and supported marketing campaigns.
 							</p>
-							<ul class="job-description">
-								<li>Developing concepts and creating layouts for
-									<b>e-shops</b>,
-									<b>landing pages</b> and other web pages;</li>
-								<li>Composing and supporting
-									<b>social media</b> ads and newsletters;</li>
-								<li>Creating visuals for
-									<b>marketing</b> purposes.</li>
-							</ul>
 						</div>
 					</div>
 					<div>
