--- a/works.html
+++ b/works.html
@@ -412,7 +412,7 @@
 		<div class="revealer"></div>
 		<!-- Thumbs grid -->
 		<div class="grid grid--thumbs">
-			<div class="grid__item" data-revealer-color="#fac92f">
+			<div class="grid__item" data-revealer-color="#f3f3f3">
 				<h3 class="grid__item-title">
 					<span>Marketing Campaign</span>
 				</h3>
@@ -424,7 +424,7 @@
 					<!-- <div class="grid__item-bg" style="background-image: url(img/Project-1-Visual-2.png)"></div> -->
 				</div>
 			</div>
-			<div class="grid__item" data-revealer-color="#fac92f">
+			<div class="grid__item" data-revealer-color="#f3f3f3">
 				<h3 class="grid__item-title">
 					<span>Mobile Apps</span>
 				</h3>
@@ -435,7 +435,7 @@
 					<img class="grid__item-img" src="img/Project-2-Visual.png" alt="Some image" />
 				</div>
 			</div>
-			<div class="grid__item" data-revealer-color="#fac92f">
+			<div class="grid__item" data-revealer-color="#f3f3f3">
 				<h3 class="grid__item-title">
 					<span>Dance Network</span>
 				</h3>
@@ -447,7 +447,7 @@
 					<!-- <div class="grid__item-bg" style="background-image: url(img/thumb3.jpg)"></div> -->
 				</div>
 			</div>
-			<div class="grid__item" data-revealer-color="#fac92f">
+			<div class="grid__item" data-revealer-color="#f3f3f3">
 				<h3 class="grid__item-title">
 					<span>Ruby – Art Project</span>
 				</h3>
