--- a/index.html
+++ b/index.html
@@ -27,18 +27,21 @@
 							</svg>
 						</div>
 			<div class="content">
+					<div class="button-holder-home">
+							<span class="btn-2 content__title"><span>explore</span><em></em></span>
+						</div>
 				<nav class="page-nav">
-						<a href="works.html" class="menu-item-home first-item">Works</a>
-						<a href="cv.html" class="menu-item-home second-item">Curriculum Vitae</a>
-						<a href="contact.html" class="menu-item-home last-item">Contact</a>
-						<a class="page-nav__item page-nav__item--close" href="#">Back</a>
+						<a href="works.html" class="menu-item-home first-item">works</a>
+						<a href="cv.html" class="menu-item-home second-item">curriculum Vitae</a>
+						<a href="contact.html" class="menu-item-home last-item">contact</a>
+						<a class="page-nav__item page-nav__item--close" href="#">back</a>
 				</nav>
 				<div class="pieces" style="background-image: url(img/Elena-pic-cut.jpg)"></div>
 				<div class="grid-scrollable grid--outer">
 				<div class="title-wrap info info--open">
 					<div>
 						<h2 class="title">Elena Volovicheva</h2>
-						<div class="space-25"></div>
+						<div class="space-10"></div>
 						<!-- <span class="profession">designer / artist / frontend-developer</span> -->
 						<span class="subtitle">portfolio</span>
 						<span class="year">2018</span>
@@ -47,11 +50,12 @@
 							<p>Designer /<br>Artist /<br> Frontend-Developer
 							</p>
 						</div>
-						<div class="content__title-container">
+						<!-- <div class="content__title-container">
 							<h2 class="content__title">Explore</h2>
-						</div>
+						</div> -->
 						</div>
 						<!-- <div><h3 class="fullview__title-mobile">Made by Elena Volovicheva</h3></div> -->
+						<h3 class="fullview__title">made by Elena Volovicheva</h3>
 					</div>
 			</div>
 		</main>
@@ -120,7 +124,7 @@
 					targets: optionsCtrl,
 					duration: 700,
 					easing: 'easeOutExpo',
-					scale: 1.2,
+					// scale: 1.2,
 					opacity: 0
 				});
 
@@ -177,7 +181,7 @@
 					duration: 700,
 					delay: 200,
 					easing: 'easeOutQuint',
-					scale: [1.1,1],
+					// scale: [1.1,1],
 					opacity: 1
 				});
 
