--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						</div>
 				<nav class="page-nav">
 						<a href="works.html" class="menu-item-home first-item">works</a>
-						<a href="cv.html" class="menu-item-home second-item">curriculum Vitae</a>
+						<a href="cv.html" class="menu-item-home second-item">curriculum vitae</a>
 						<a href="contact.html" class="menu-item-home last-item">contact</a>
 						<a class="page-nav__item page-nav__item--close" href="#">back</a>
 				</nav>
