--- a/works.html
+++ b/works.html
@@ -463,9 +463,9 @@
 					<button class="grid__toggle">
 						<span class="grid__toggle-inner grid__toggle-more">
 						<span class="grid__toggle-text">Made with love</span>
-						<svg class="grid__toggle-icon grid__toggle-icon--more">
+						<!-- <svg class="grid__toggle-icon grid__toggle-icon--more">
 							<use xlink:href="#icon-plus"></use>
-						</svg>
+						</svg> -->
 					</span>
 					<span class="grid__toggle-inner grid__toggle-back">
 						<span class="grid__toggle-text">back</span>
